// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Grid Renders with props 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Grid
    photos={
        Array [
            Object {
              "id": "123",
              "images": Object {
                "downsized_medium": Object {
                  "url": "test_url",
                },
              },
              "title": "test title",
            },
          ]
    }
/>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        <Photo
          photo={
                    Object {
                              "id": "123",
                              "images": Object {
                                "downsized_medium": Object {
                                  "url": "test_url",
                                },
                              },
                              "title": "test title",
                            }
          }
/>,
      ],
      "className": "photo-grid",
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": "0",
        "nodeType": "function",
        "props": Object {
          "photo": Object {
            "id": "123",
            "images": Object {
              "downsized_medium": Object {
                "url": "test_url",
              },
            },
            "title": "test title",
          },
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
    ],
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <Photo
            photo={
                        Object {
                                    "id": "123",
                                    "images": Object {
                                      "downsized_medium": Object {
                                        "url": "test_url",
                                      },
                                    },
                                    "title": "test title",
                                  }
            }
/>,
        ],
        "className": "photo-grid",
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": "0",
          "nodeType": "function",
          "props": Object {
            "photo": Object {
              "id": "123",
              "images": Object {
                "downsized_medium": Object {
                  "url": "test_url",
                },
              },
              "title": "test title",
            },
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
      ],
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`Grid Renders without props 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Grid />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": <div
        className="error-output"
>
        Nothing to display
</div>,
      "className": "photo-grid",
    },
    "ref": null,
    "rendered": Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": "Nothing to display",
        "className": "error-output",
      },
      "ref": null,
      "rendered": "Nothing to display",
      "type": "div",
    },
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": <div
          className="error-output"
>
          Nothing to display
</div>,
        "className": "photo-grid",
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": "Nothing to display",
          "className": "error-output",
        },
        "ref": null,
        "rendered": "Nothing to display",
        "type": "div",
      },
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;
